# nucleo-h743zi

./: .gitignore  Cargo.toml  README.md
.cargo/: config
.github/workflows/: rust.yml
debug/: openocd.cfg
