[package]
name = "nucleo-h743zi-rs"
version = "0.1.0"
authors = ["kabirz <jxwazxzhp@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-itm = "0.4.1"
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
nb = "0.1.2"
panic-halt = "0.2.0"
stm32h7xx-hal = {version="0.2.1", features=["stm32h743"]}

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
